# cng

./: .gitmodules  CMakeLists.txt
data/blueprints/buildings/: new_building.json  test_room.json
data/items/: weapons.json
src/: main.cpp
src/app/: Application.cpp  Application.h  InputState.h
src/buildings/: BuildingBlueprint.cpp  BuildingBlueprint.h
src/core/: Types.h
src/data/: GameData.cpp  GameData.h
src/editor/: BuildingEditor.cpp  BuildingEditor.h
src/entities/: Entity.cpp  Entity.h
src/renderer/: Camera.cpp  Camera.h  ChunkMesh.cpp  ChunkMesh.h  Renderer.cpp  Renderer.h
src/systems/: Movement.cpp  Movement.h
src/world/: World.cpp  World.h  WorldGen.cpp  WorldGen.h
tests/: WorldgenTests.cpp
